fix(entries/distribution): refresh button is cut off

--- a/src/applications/content-entries-app/entry/entry-distribution/entry-distribution.component.scss
+++ b/src/applications/content-entries-app/entry/entry-distribution/entry-distribution.component.scss
@@ -21,6 +21,9 @@
       outline: 0;
       color: $kGrayscale3;
       margin-right: -5px;
+      @media screen and (-ms-high-contrast: active), (-ms-high-contrast: none) {
+          width: 38px;
+      }
       &:active {
         box-shadow: none;
         top: 2px;
